src/tests/functionality/assignment_3_io_arrays_comments/valid/03_mandatory_array_1d_declare_assign_access.c
int main() {
    int values[3];
    values[0] = 3;
    values[1] = 45;
    values[2] = values[0] + values[1];
    return values[2];
}
