src/tests/functionality/assignment_3_io_arrays_comments/invalid_semantic/07_mandatory_array_element_type_check_wrong_assignment.c
int main() {
    int values[2];
    values[0] = "text";
    return 0;
}
